update bai tuan 2

--- a/Tuan09/bai2/CaffeApp/app.json
+++ b/Tuan09/bai2/CaffeApp/app.json
@@ -44,6 +44,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "72893ea5-ccc3-42f9-a4a1-9fd218c56784"
+      }
+    },
+    "owner": "ngochai147"
   }
 }
